# StrokeMitra-FullStack

./: MONOREPO_DEPLOYMENT.md  README.md
backend/: DEPLOYMENT.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  RENDER_DEPLOY.md  WALKTHROUGH.md  build_frontend.sh  demo_simple.py  evaluate_model.py  mlflow.db  pyproject.toml  record_and_analyze.py  render.yaml  requirements.txt  setup_kaggle.sh  slurring_detection_feature_plam.md  test_api.py  test_trained_model.py  test_trained_pipeline.py  test_voice_input.py
backend/api/: __init__.py  dependencies.py  main.py  schemas.py
backend/api/routers/: analyse.py  health.py
backend/configs/: feature_config.yaml  inference_config.yaml  logging_config.yaml  model_config.yaml  risk_score_config.yaml
backend/data/manifests/: test.csv  test_manifest.csv  train.csv  train_manifest.csv  val.csv  val_manifest.csv
backend/docker/: Dockerfile  docker-compose.yml  prometheus.yml
backend/models/: hubert_fast_best.pt
backend/monitoring/: __init__.py  drift_detector.py  metrics_logger.py  retraining_trigger.py
backend/notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_explainability_analysis.ipynb  README.md
backend/scripts/: build_manifests.py  download_dataset.py  run_training.sh
backend/src/: __init__.py  pipeline.py
backend/src/explainability/: __init__.py  attention_rollout.py  gradcam.py  segment_localiser.py
backend/src/features/: __init__.py  egemaps_extractor.py  feature_fusion.py  formant_extractor.py  mfcc_extractor.py  prosodic_extractor.py  schemas.py  spectrogram_builder.py
backend/src/ingestion/: __init__.py  audio_loader.py  preprocessor.py  quality_checker.py  schemas.py  vad.py
backend/src/models/: __init__.py  calibration.py  ensemble.py  model_registry.py
backend/src/reporting/: __init__.py  json_renderer.py  pdf_renderer.py  report_builder.py  schemas.py
backend/src/reporting/templates/: report_template.html  styles.css
backend/src/risk/: __init__.py  risk_scorer.py  risk_tier.py  schemas.py
backend/src/scoring/: __init__.py  schemas.py  severity_classifier.py  slurring_scorer.py
backend/test_outputs/: result_20260315_013637.json
backend/tests/unit/: test_pipeline.py
backend/training/: augmentation.py  calibrate.py  dataset.py  evaluate.py  train_cnn_bilstm.py  train_ensemble_weights.py  train_hubert_fast.py  train_hubert_salr.py
frontend/src/: api.js
frontend/src/components/: VoiceModule.jsx
